Updated API docs
